@@ -42,4 +42,13 @@ tasks.named('test') {
 
 tasks.withType(JavaCompile).configureEach {
 	options.compilerArgs.add('-parameters')
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs += ['--enable-preview']
 }
